@@ -143,6 +143,18 @@ atf_check_equal_eval_fail_body()
     atf_check_equal '${x}' '${y}'
 }
 
+atf_test_case atf_check_timeout
+atf_check_timeout_head()
+{
+    atf_set "descr" "Helper test case for the t_atf_check test program"
+    atf_set "timeout" 1
+}
+atf_check_timeout_body()
+{
+    atf_check true
+    atf_check sleep 42
+}
+
 # -------------------------------------------------------------------------
 # Helper tests for "t_config".
 # -------------------------------------------------------------------------
@@ -273,6 +285,7 @@ atf_init_test_cases()
     atf_add_test_case atf_check_equal_fail
     atf_add_test_case atf_check_equal_eval_ok
     atf_add_test_case atf_check_equal_eval_fail
+    atf_add_test_case atf_check_timeout
 
     # Add helper tests for t_config.
     atf_add_test_case config_get
